--- a/localization/en-GB.xml
+++ b/localization/en-GB.xml
@@ -334,7 +334,7 @@
     <ButtonSignUp>Sign Up</ButtonSignUp>
     <ButtonSkip>Skip</ButtonSkip>
     <ButtonView>View</ButtonView>
-    <ButtonWhereUsed>Where it is used?</ButtonWhereUsed>
+    <ButtonWhereUsed>Where is it used?</ButtonWhereUsed>
     <Cancel>Cancel</Cancel>
     <CheckBoxMoveToRecycleBin>Move to Recycle Bin</CheckBoxMoveToRecycleBin>
     <CheckBoxRememberMe>Remember Me</CheckBoxRememberMe>
