--- a/localization/ru.xml
+++ b/localization/ru.xml
@@ -105,6 +105,7 @@
     <Down>Вниз</Down>
     <Duplicate>Копия</Duplicate>
     <Export>Экспорт</Export>
+    <ForceDelete>Все равно удалить</ForceDelete>
     <Help>Помощь</Help>
     <LessOptions>Меньше параметров</LessOptions>
     <LoadDataSet>Загрузить DataSet (*.data)</LoadDataSet>
@@ -378,6 +379,7 @@
     <LabelCurrentPassword>Текущий пароль:</LabelCurrentPassword>
     <LabelDataFile>Файл данных:</LabelDataFile>
     <LabelDataUrl>URL данных:</LabelDataUrl>
+    <LabelEndDate>Дата завершения:</LabelEndDate>
     <labelFileName>Наименование файла:</labelFileName>
     <LabelForeground>Передний план:</LabelForeground>
     <LabelFromReport>Из отчета</LabelFromReport>
@@ -392,6 +394,7 @@
     <LabelPicture>Изображение:</LabelPicture>
     <LabelRenderedReport>Построенный отчет</LabelRenderedReport>
     <LabelResponseAsFile>Ответ в виде файла</LabelResponseAsFile>
+    <LabelResultType>Тип результа:</LabelResultType>
     <LabelSeparateReport>Отдельный файл отчета(и скриптов)</LabelSeparateReport>
     <LabelShowReport>Отобразить отчет:</LabelShowReport>
     <labelUserName>Имя пользователя:</labelUserName>
@@ -427,6 +430,7 @@
     <RootFolder>Основная папка</RootFolder>
     <Save>Сохранить</Save>
     <SaveAccountSettings>Запомнить настройки аккаунта</SaveAccountSettings>
+    <SaveAsType>Сохранить как тип</SaveAsType>
     <SaveFile>Сохранить файл</SaveFile>
     <SavingToStimulsoftCloudPleaseWait>Отчет сохраняется в облако. Пожалуйста, ожидайте!</SavingToStimulsoftCloudPleaseWait>
     <ShareWindowTitleNew>Доступ</ShareWindowTitleNew>
@@ -1863,6 +1867,7 @@
     <PutFeedPageCode>Разграничивать страницы в конечном документе при помощи специального символа.</PutFeedPageCode>
     <RangePages>Номера страниц, которые необходимо обработать. Указать можно одну страницу, список страниц (используя запятые как разделитель), а также задать диапазон, задав начальную страницу диапазона, разделитель "-", и конечную страницу диапазона. Для примера: 1,3,5-12.</RangePages>
     <RemoveEmptySpaceAtBottom>Минимизировать пустое место внизу страницы.</RemoveEmptySpaceAtBottom>
+    <Resources>Отображение панели ресурсов</Resources>
     <RestrictEditing>Ограничения на изменения в документе Word.</RestrictEditing>
     <Save>Сохранить отчет для последующего использования.</Save>
     <ScaleHtml>Размер (масштаб) страниц отчета и элементов отчета после экспорта.</ScaleHtml>
@@ -2023,17 +2028,11 @@
     <menuViewToolbars>Панели &amp;инструментов</menuViewToolbars>
   </MainMenu>
   <Map>
-    <GroupAsia>Азия</GroupAsia>
-    <GroupAfrica>Африка</GroupAfrica>
-    <GroupEurope>Европа</GroupEurope>
-    <GroupNorthAmerica>Северная Америка</GroupNorthAmerica>
-    <GroupOceania>Океания</GroupOceania>
-    <GroupSouthAmerica>Южная Америка</GroupSouthAmerica>
-    <GroupWorld>Мир</GroupWorld>
     <LinkDataForm>Данные</LinkDataForm>
     <MapEditorForm>Редактор карт</MapEditorForm>
   </Map>
   <Messages>
+    <ChangeRequestTimeout>Время ожидания для SQL запросов превышает время ожидания запросов дизайнера. Установите время ожидания запросов дизайнера не менее {0} секунд.</ChangeRequestTimeout>
     <DoNotShowAgain>Не показывать снова</DoNotShowAgain>
     <MessageTimeOutExpired>Истекло время ожидания исполнения команды!</MessageTimeOutExpired>
     <TextRegistrationSuccessfully>Регистрация прошла успешно!</TextRegistrationSuccessfully>
@@ -2749,95 +2748,13 @@
     <StiLegendVertAlignmentCenter>По центру</StiLegendVertAlignmentCenter>
     <StiLegendVertAlignmentTop>Сверху</StiLegendVertAlignmentTop>
     <StiLegendVertAlignmentTopOutside>Сверху за пределами</StiLegendVertAlignmentTopOutside>
-    <StiMapIDAustralia>Австралия</StiMapIDAustralia>
-    <StiMapIDIndonesia>Индонезия</StiMapIDIndonesia>
-    <StiMapIDNewZealand>Новая Зеландия</StiMapIDNewZealand>
-    <StiMapIDArmenia>Армения</StiMapIDArmenia>
-    <StiMapIDAzerbaijan>Азербайджан</StiMapIDAzerbaijan>
-    <StiMapIDCyprus>Кипр</StiMapIDCyprus>
-    <StiMapIDIndia>Индия</StiMapIDIndia>
-    <StiMapIDIsrael>Израиль</StiMapIDIsrael>
-    <StiMapIDJapan>Япония</StiMapIDJapan>
-    <StiMapIDKazakhstan>Казахстан</StiMapIDKazakhstan>
-    <StiMapIDMalaysia>Малайзия</StiMapIDMalaysia>
-    <StiMapIDPhilippines>Филиппины</StiMapIDPhilippines>
-    <StiMapIDSaudiArabia>Саудовская Аравия</StiMapIDSaudiArabia>
-    <StiMapIDSouthKorea>Южная Корея</StiMapIDSouthKorea>
-    <StiMapIDThailand>Таиланд</StiMapIDThailand>
-    <StiMapIDVietnam>Вьетнам</StiMapIDVietnam>
-    <StiMapIDAustria>Австрия</StiMapIDAustria>
-    <StiMapIDBrazil>Бразилия</StiMapIDBrazil>
-    <StiMapIDCanada>Канада</StiMapIDCanada>
-    <StiMapIDChina>Китай</StiMapIDChina>
-    <StiMapIDEU>ЕС</StiMapIDEU>
-    <StiMapIDEurope>Европа</StiMapIDEurope>
-    <StiMapIDFrance>Франция</StiMapIDFrance>
-    <StiMapIDGermany>Германия</StiMapIDGermany>
-    <StiMapIDItaly>Италия</StiMapIDItaly>
-    <StiMapIDNetherlands>Нидерланды</StiMapIDNetherlands>
-    <StiMapIDRussia>Россия</StiMapIDRussia>
-    <StiMapIDUK>Великобритания</StiMapIDUK>
-    <StiMapIDUSA>США</StiMapIDUSA>
-    <StiMapIDWorld>Мир</StiMapIDWorld>
-    <StiMapIDSouthAfrica>Южная Африка</StiMapIDSouthAfrica>
-    <StiMapIDMexico>Мексика</StiMapIDMexico>
-    <StiMapIDArgentina>Аргентина</StiMapIDArgentina>
-    <StiMapIDBolivia>Боливия</StiMapIDBolivia>
-    <StiMapIDChile>Чили</StiMapIDChile>
-    <StiMapIDColombia>Колумбия</StiMapIDColombia>
-    <StiMapIDEcuador>Эквадор</StiMapIDEcuador>
-    <StiMapIDFalklandIslands>Фолклендские острова</StiMapIDFalklandIslands>
-    <StiMapIDGuyana>Гайана</StiMapIDGuyana>
-    <StiMapIDParaguay>Парагвай</StiMapIDParaguay>
-    <StiMapIDPeru>Перу</StiMapIDPeru>
-    <StiMapIDSuriname>Суринам</StiMapIDSuriname>
-    <StiMapIDUruguay>Уругвай</StiMapIDUruguay>
-    <StiMapIDVenezuela>Венесуэла</StiMapIDVenezuela>
-    <StiMapIDAlbania>Албания</StiMapIDAlbania>
-    <StiMapIDAndorra>Андорра</StiMapIDAndorra>
-    <StiMapIDBelarus>Беларусь</StiMapIDBelarus>
-    <StiMapIDBelgium>Бельгия</StiMapIDBelgium>
-    <StiMapIDEstonia>Эстония</StiMapIDEstonia>
-    <StiMapIDFinland>Финляндия</StiMapIDFinland>
-    <StiMapIDGeorgia>Грузия</StiMapIDGeorgia>
-    <StiMapIDBosniaAndHerzegovina>Босния и Герцеговина</StiMapIDBosniaAndHerzegovina>
-    <StiMapIDBulgaria>Болгария</StiMapIDBulgaria>
-    <StiMapIDCroatia>Хорватия</StiMapIDCroatia>
-    <StiMapIDCzechRepublic>Чешская Республика</StiMapIDCzechRepublic>
-    <StiMapIDDenmark>Дания</StiMapIDDenmark>
-    <StiMapIDGreece>Греция</StiMapIDGreece>
-    <StiMapIDHungary>Венгрия</StiMapIDHungary>
-    <StiMapIDIceland>Исландия</StiMapIDIceland>
-    <StiMapIDIreland>Ирландия</StiMapIDIreland>
-    <StiMapIDLatvia>Латвия</StiMapIDLatvia>
-    <StiMapIDLiechtenstein>Лихтенштейн</StiMapIDLiechtenstein>
-    <StiMapIDLithuania>Литва</StiMapIDLithuania>
-    <StiMapIDLuxembourg>Люксембург</StiMapIDLuxembourg>
-    <StiMapIDMacedonia>Македония</StiMapIDMacedonia>
-    <StiMapIDMalta>Мальта</StiMapIDMalta>
-    <StiMapIDMoldova>Молдова</StiMapIDMoldova>
-    <StiMapIDMonaco>Монако</StiMapIDMonaco>
-    <StiMapIDMontenegro>Черногория</StiMapIDMontenegro>
-    <StiMapIDNorway>Норвегия</StiMapIDNorway>
-    <StiMapIDPoland>Польша</StiMapIDPoland>
-    <StiMapIDPortugal>Португалия</StiMapIDPortugal>
-    <StiMapIDRomania>Румыния</StiMapIDRomania>
-    <StiMapIDSanMarino>Сан-Марино</StiMapIDSanMarino>
-    <StiMapIDSerbia>Сербия</StiMapIDSerbia>
-    <StiMapIDSlovakia>Словакия</StiMapIDSlovakia>
-    <StiMapIDSlovenia>Словения</StiMapIDSlovenia>
-    <StiMapIDSpain>Испания</StiMapIDSpain>
-    <StiMapIDSweden>Швеция</StiMapIDSweden>
-    <StiMapIDSwitzerland>Швейцария</StiMapIDSwitzerland>
-    <StiMapIDTurkey>Турция</StiMapIDTurkey>
-    <StiMapIDUkraine>Украина</StiMapIDUkraine>
-    <StiMapIDVatican>Ватикан</StiMapIDVatican>
     <StiMapModeChoropleth>Картограмма</StiMapModeChoropleth>
     <StiMapModeOnline>Онлайн</StiMapModeOnline>
     <StiMapTypeGroup>Группа</StiMapTypeGroup>
     <StiMapTypeHeatmap>Тепловая карта</StiMapTypeHeatmap>
     <StiMapTypeHeatmapWithGroup>Тепловая карта с группировкой</StiMapTypeHeatmapWithGroup>
     <StiMapTypeNone>Нет</StiMapTypeNone>
+    <StiMapTypeIndividual>Индивидуальная</StiMapTypeIndividual>
     <StiMapTypePoints>Точки</StiMapTypePoints>
     <StiMarkerAlignmentLeft>Слева</StiMarkerAlignmentLeft>
     <StiMarkerAlignmentRight>Справа</StiMarkerAlignmentRight>
