--- a/localization/be.xml
+++ b/localization/be.xml
@@ -1957,7 +1957,7 @@
     <menuEditViewData>Прагляд дадзеных...</menuEditViewData>
     <menuFile>&amp;Файл</menuFile>
     <menuFileClose>&amp;Зачынiць</menuFileClose>
-    <menuFileDashboardNew>Новая панэль індыкатараў</menuFileDashboardNew>
+    <menuFileDashboardNew>Стварыць панэль індыкатараў</menuFileDashboardNew>
     <menuFileDashboardOpen>&amp;Адкрыць панэль індыкатараў...</menuFileDashboardOpen>
     <menuFileDashboardSaveAs>&amp;Захоўваць панэль індыкатараў як...</menuFileDashboardSaveAs>
     <menuFileExit>В&amp;ыхад</menuFileExit>
