--- a/localization/ru.ext.xml
+++ b/localization/ru.ext.xml
@@ -1667,5 +1667,6 @@
     <AddNewConnection>Добавить новое соединение</AddNewConnection>
     <ReplaceConnectionString>Заменить строку подключения</ReplaceConnectionString>
     <ReplacePathToData>Заменить путь к данным</ReplacePathToData>
+    <Use>Использовать</Use>
   </Publish>
 </Localization>
