--- a/localization/ru.xml
+++ b/localization/ru.xml
@@ -329,6 +329,9 @@
     <VerticalNone>&lt;b&gt;Не отображать&lt;/b&gt;&lt;br&gt;Не отображать вертикальные линии&lt;/br&gt;</VerticalNone>
   </ChartRibbon>
   <Cloud>
+    <AcceptTermsAndPrivacyPolicy>Я ознакомился с {0}, {1} и принимаю их условия.</AcceptTermsAndPrivacyPolicy>
+    <PrivacyPolicy>политикой конфиденциальности</PrivacyPolicy>
+    <TermsOfUse>правилами</TermsOfUse>
     <AccountSettings>Настройки аккаунта</AccountSettings>
     <AddAPlace>Добавление места</AddAPlace>
     <ButtonChangePassword>Изменить пароль</ButtonChangePassword>
@@ -603,6 +606,10 @@
     <NewMeasure>Новый показатель</NewMeasure>
     <NumberFilters>Числовые фильтры</NumberFilters>
     <RemoveField>Удалить поле</RemoveField>
+    <SortAZ>Сортировка от А до Я</SortAZ>
+    <SortLargestToSmallest>Сортировка от максимального к минимальному</SortLargestToSmallest>
+    <SortSmallestToLargest>Сортировка от минимального к максимальному</SortSmallestToLargest>
+    <SortZA>Сортировка от Я до А</SortZA>
     <Sparklines>Спарклайны</Sparklines>
     <StringFilters>Строковые фильтры</StringFilters>
     <Trend>Тренд</Trend>
@@ -1286,6 +1293,7 @@
     <SelectUILanguage>Выберите язык интерфейса</SelectUILanguage>
     <ShowDialogForms>Показывать диалоговые формы</ShowDialogForms>
     <ShowDimensionLines>Показывать размерные линии</ShowDimensionLines>
+    <ShowOldGaugeEditor>Показывать старый редактор индикаторов</ShowOldGaugeEditor>
     <title>Параметры</title>
     <UseComponentColor>Использовать цвета компонента для заполнения</UseComponentColor>
     <UseLastFormat>Использовать последнее форматирование</UseLastFormat>
@@ -1601,6 +1609,7 @@
   <HelpComponents>
     <StiBarCode>Компонент используется для отображения в отчете штрих-кодов. Данные для кодирования штрих-кода устанавливаются в виде строки. Строка может содержать любые символы, но только разрешенные символы для указанного типа штрих-кода будут отображаться.</StiBarCode>
     <StiChart>Этот компонент используется для отображения диаграмм в отчете. Доступно множество различных типов диаграмм.</StiChart>
+    <StiChartElement>Этот компонент используется для отображения диаграмм в панели индикаторов. Доступно множество различных типов диаграмм.</StiChartElement>
     <StiCheckBox>Компонент для отображения флажков в отчете. Он может менять свой внешний вид в зависимости от условия, которое может принимать два значения: "включено" или "выключено".</StiCheckBox>
     <StiChildBand>Подчиненный бэнд используется для вывода более одного бэнда для одной строки данных.</StiChildBand>
     <StiClone>Этот компонент используется для клонирования части отчета в другое место отчета. Клонирование может быть применено только к компоненту панель.</StiClone>
@@ -1617,26 +1626,35 @@
     <StiEmptyBand>Бэнд используется для заполнения свободного пространства в нижней части страницы.</StiEmptyBand>
     <StiFooterBand>Бэнд используется для вывода итога для бэнда данные. Итог выводится сразу же после всех строк бэнда данные.</StiFooterBand>
     <StiGauge>Компонент отображает значение в пределах заранее определенного диапазона.</StiGauge>
+    <StiGaugeElement>Компонент отображает значение в пределах заранее определенного диапазона.</StiGaugeElement>
     <StiGroupFooterBand>Бэнд используется для вывода итога группы. Он размещается после бэнда данные. Каждый бэнд итог группы принадлежит к определенному заголовку группы.</StiGroupFooterBand>
     <StiGroupHeaderBand>Это основной бэнд для создания отчетов с группировкой. Компоненты для отображения информации по группе размещаются на бэнде заголовке группы. Это может быть название группы, даты, условия группировки и т.д. Бэнд заголовок группы выводится один раз в начале каждой группы.</StiGroupHeaderBand>
     <StiHeaderBand>Бэнд используется для вывода заголовка для бэнда данные. Заголовок выводится перед выводом строк бэнда данные.</StiHeaderBand>
     <StiHierarchicalBand>Бэнд выводится столько раз, сколько строк в источнике данных, который связан с ним. Данные выводятся в виде дерева.</StiHierarchicalBand>
     <StiHorizontalLinePrimitive>Геометрический примитив - горизонтальная линия. Используется для визуального оформления отчетов.</StiHorizontalLinePrimitive>
     <StiImage>Этот компонент используется для вывода изображений. Он поддерживает следующие графические форматы: BMP, JPG, JPEG, GIF, TIFF, PNG, ICO, WMF, EMF.</StiImage>
+    <StiImageElement>Этот компонент используется для вывода изображений. Он поддерживает следующие графические форматы: BMP, JPG, JPEG, GIF, TIFF, PNG, ICO, WMF, EMF.</StiImageElement>
+    <StiIndicatorElement>Компонент отображает разницу значений между входными данными.</StiIndicatorElement>
     <StiMap>Этот компонент используется для отображения данных, привязанных к географическим локациям.</StiMap>
+    <StiMapElement>Этот компонент используется для отображения данных, привязанных к географическим локациям.</StiMapElement>
     <StiOverlayBand>Этот бэнд используется для вывода водяных знаков на странице.</StiOverlayBand>
     <StiPageFooterBand>Бэнд итог страницы используется для вывода информации в нижней части каждой страницы, и используется для вывода номеров страниц, дат и другой дополнительной информации.</StiPageFooterBand>
     <StiPageHeaderBand>Бэнд используется для вывода заголовка страницы. Он выводится в верхней части каждой страницы, и используется для вывода номеров страниц, дат и другой дополнительной информации.</StiPageHeaderBand>
     <StiPanel>Это прямоугольная область, где другие компоненты, в том числе и бэнды, могут быть размещены. При перемещении панели компоненты размещенные на ней будут также перемещены. Панель может размещаться как на бэнде так и на странице.</StiPanel>
+    <StiPanelElement>Это прямоугольная область, где другие компоненты могут быть размещены. При перемещении панели компоненты размещенные на ней будут также перемещены.</StiPanelElement>
+    <StiProgressElement>Компонент отображает процентное соотношение между входными данными. Может быть представлен в различном режиме: кольцо, круг, гистограмма.</StiProgressElement>
     <StiRectanglePrimitive>Геометрический примитив - прямоугольник, используется для визуального оформления отчетов. Левый верхний угол прямоугольника может находится в области одного бэнда, а правый нижний угол - в области другого бэнда.</StiRectanglePrimitive>
     <StiReportSummaryBand>Этот бэнд используется для вывода итога по всему отчету. Бэнд выводится один раз в конце отчета.</StiReportSummaryBand>
     <StiReportTitleBand>Этот бэнд используется для вывода названия отчета. Он выводится в начале отчета перед другими бэндами.</StiReportTitleBand>
     <StiRichText>Компонент для вывода и редактирования текста RTF. Поддерживает загрузку и сохранение файлов в формате RTF.</StiRichText>
     <StiRoundedRectanglePrimitive>Геометрический примитив - закругленный прямоугольник. Этот примитив аналогичен примитиву прямоугольник за исключением того, что имеет закругленные углы. Примитив поддерживается не всеми видами экспорта.</StiRoundedRectanglePrimitive>
     <StiShape>Компонент предназначенный для отображения различных геометрических примитивов, таких как стрелки, линии, прямоугольники, треугольники.</StiShape>
+    <StiShapeElement>Компонент предназначенный для отображения различных геометрических фигур.</StiShapeElement>
     <StiSubReport>Этот компонент используется для вывода дополнительных данных в разных местах отчета.</StiSubReport>
     <StiTable>Этот компонент представляет собой набор элементов данных, организованных в виде таблицы.</StiTable>
+    <StiTableElement>Этот компонент представляет собой набор элементов данных, организованных в виде таблицы.</StiTableElement>
     <StiText>Основной компонент для вывода текстовой информации в отчете.</StiText>
+    <StiTextElement>Основной компонент для вывода текстовой информации в панели индикаторов.</StiTextElement>
     <StiTextInCells>Компонент для вывода текста в виде ячеек. Обычно используется при печати бланков.</StiTextInCells>
     <StiVerticalLinePrimitive>Геометрический примитив - вертикальная линия, используется для визуального оформления отчетов. Вертикальная линия может начинаться в области одного бэнда, а заканчиваться в области другого бэнда.</StiVerticalLinePrimitive>
     <StiWinControl>Компонент предназначенный для отображения визуальных элементов управления .NET Framework.</StiWinControl>
@@ -1954,7 +1972,7 @@
     <menuEditViewData>Просмотр данных...</menuEditViewData>
     <menuFile>&amp;Файл</menuFile>
     <menuFileClose>&amp;Закрыть</menuFileClose>
-    <menuFileDashboardNew>Новая панель индикаторов</menuFileDashboardNew>
+    <menuFileDashboardNew>Создать панель индикаторов</menuFileDashboardNew>
     <menuFileDashboardOpen>&amp;Открыть панель индикаторов...</menuFileDashboardOpen>
     <menuFileDashboardSaveAs>Со&amp;хранить панель индикаторов как...</menuFileDashboardSaveAs>
     <menuFileExit>В&amp;ыход</menuFileExit>
@@ -2105,6 +2123,7 @@
     <ItemCantBeMovedToSpecifiedPlace>Элемент не может быть перемещен в указанное место!</ItemCantBeMovedToSpecifiedPlace>
     <ItemDoesNotSupport>Элемент не поддерживает "{0}"!</ItemDoesNotSupport>
     <KeyAndToKeyAreEqual>Key и ToKey равны!</KeyAndToKeyAreEqual>
+    <MessageMaximumFileSizeExceeded>Внимание! Вы хотите добавить файл, но его размер превышает максимально-допустимый размер. Все равно добавить этот файл (обработка отчета может замедлиться)?</MessageMaximumFileSizeExceeded>
     <NewProduct>К Вашей подписке добавлен новый продукт!</NewProduct>
     <NewVersionsAvailable>Новая версия доступна!</NewVersionsAvailable>
     <NotificationFailed>Неверный результат!</NotificationFailed>
@@ -2708,6 +2727,7 @@
     <StiGaugeCalculationModeCustom>По выбору</StiGaugeCalculationModeCustom>
     <StiGaugeTypeFullCircular>Полный циферблат</StiGaugeTypeFullCircular>
     <StiGaugeTypeHalfCircular>Половина циферблата</StiGaugeTypeHalfCircular>
+    <StiGaugeTypeLinear>Линейный</StiGaugeTypeLinear>
     <StiGroupSortDirectionAscending>По возрастанию</StiGroupSortDirectionAscending>
     <StiGroupSortDirectionDescending>По убыванию</StiGroupSortDirectionDescending>
     <StiGroupSortDirectionNone>Нет</StiGroupSortDirectionNone>
@@ -2753,8 +2773,8 @@
     <StiMapTypeGroup>Группа</StiMapTypeGroup>
     <StiMapTypeHeatmap>Тепловая карта</StiMapTypeHeatmap>
     <StiMapTypeHeatmapWithGroup>Тепловая карта с группировкой</StiMapTypeHeatmapWithGroup>
-    <StiMapTypeNone>Нет</StiMapTypeNone>
     <StiMapTypeIndividual>Индивидуальная</StiMapTypeIndividual>
+    <StiMapTypeNone>Нет</StiMapTypeNone>
     <StiMapTypePoints>Точки</StiMapTypePoints>
     <StiMarkerAlignmentLeft>Слева</StiMarkerAlignmentLeft>
     <StiMarkerAlignmentRight>Справа</StiMarkerAlignmentRight>
@@ -3256,6 +3276,7 @@
     <DateInfo>Информация о датах</DateInfo>
     <DateTimeStep>Шаг времени</DateTimeStep>
     <Default>По умолчанию</Default>
+    <DefaultColor>Цвет по умолчанию</DefaultColor>
     <DefaultHeightCell>Высота ячейки по умолчанию</DefaultHeightCell>
     <DefaultNamespace>Пространство имен</DefaultNamespace>
     <DependentColumn>Зависимая колонка</DependentColumn>
@@ -3472,6 +3493,7 @@
     <LineLimit>Ограничение строки</LineLimit>
     <LineMarker>Маркер линии</LineMarker>
     <LinesOfUnderline>Линии подчеркивания</LinesOfUnderline>
+    <LineSpacing>Междустрочный интервал</LineSpacing>
     <LineStyle>Стиль линии</LineStyle>
     <LineWidth>Толщина линии</LineWidth>
     <Linked>Связь</Linked>
@@ -3707,6 +3729,7 @@
     <ShowLabelText>Показывать текст</ShowLabelText>
     <ShowLegend>Показывать легенду</ShowLegend>
     <ShowMarker>Показывать маркер</ShowMarker>
+    <ShowName>Показывать наименование</ShowName>
     <ShowNulls>Показывать неопределенные</ShowNulls>
     <ShowOnZeroValues>Показывать при нулевых величинах</ShowOnZeroValues>
     <ShowOthers>Показывать остальные значения</ShowOthers>
@@ -3719,6 +3742,7 @@
     <ShowTotal>Показывать итоги</ShowTotal>
     <ShowUpDown>Показывать вверх вниз</ShowUpDown>
     <ShowValue>Показывать значение</ShowValue>
+    <ShortName>Короткое имя</ShortName>
     <ShowXAxis>Показывать X ось</ShowXAxis>
     <ShowYAxis>Показывать Y ось</ShowYAxis>
     <ShowZeros>Показывать нули</ShowZeros>
@@ -3767,6 +3791,7 @@
     <Strikeout>Зачеркнутый</Strikeout>
     <StripBrush>Кисть полосы</StripBrush>
     <Strips>Полосы</Strips>
+    <Stroke>Зачеркнутый</Stroke>
     <StructuredAppendPosition>Structured Append Position</StructuredAppendPosition>
     <StructuredAppendTotal>StructuredAppendTotal</StructuredAppendTotal>
     <Style>Стиль</Style>
